--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
@@ -46,7 +46,7 @@
                         <div><span class="spinner"></span></div>
                     </div>
                     <div class="row text-center contribution-details" id="contribution-details">
-                        <%- include('../common/contributionStats.ejs',{labels :['Languages pairs','People participated','Hrs transcribed','Hrs corrected']}) %>
+                        <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Hrs transcribed','Hrs corrected']}) %>
                     </div>
                 </div>
             </div>
