--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/thank-you.ejs
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../css/likho/thankyou.css">
-    <link rel="stylesheet" type="text/css" href="../../css/likho/home.css">
+    <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/thankyou.css">
+    <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/home.css">
     <link rel="stylesheet" type="text/css" href="../../css/common/common.css">
 </head>
 
@@ -121,7 +121,7 @@
 <%- include('../common/footer.ejs',{path:"../"}) %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="../../js/sunoIndia/thank-you.js"></script>
+<script src="../../js/likhoIndia/thank-you.js"></script>
 </body>
 
 </html>
