--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -25,6 +25,15 @@
     </div>
 </div>
 <div class="col-12 col-md-5 col-lg-5 text-dark mt-4 card card2 ml-lg-3 justify-content-center align-items-center py-3" id="right">
+    <div class="row position-absolute" id="warning-msg">
+       <div class="warning-mesg d-flex">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M11.953 2C6.465 2 2 6.486 2 12C2 17.514 6.486 22 12 22C17.514 22 22 17.514 22 12C22 6.486 17.493 2 11.953 2ZM12 20C7.589 20 4 16.411 4 12C4 7.589 7.567 4 11.953 4C16.391 4 20 7.589 20 12C20 16.411 16.411 20 12 20Z" fill="#4D82F7"/>
+            <path d="M11 7H13V14H11V7ZM11 15H13V17H11V15Z" fill="#4D82F7"/>
+            </svg>
+            <p class="pl-2">No validation data available for selected language</p>
+       </div>
+    </div>
     <div id="right_container" class="row position-relative align-items-center py-lg-5 col-10 card_container px-0" style="height:100%">
         <div class="col-8 px-0">
             <h1 class="display-5">
