--- a/crowdsource-ui/src/views/common/modals/changeKeyboard/keyboardInstructions.css
+++ b/crowdsource-ui/src/views/common/modals/changeKeyboard/keyboardInstructions.css
@@ -26,7 +26,7 @@
         color: #007BFF;
     }
 
-    .modal-footer {
+    #keyboardInstructions .modal-footer {
         justify-content: flex-start;
     }
    
