--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -22,8 +22,11 @@
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
-        <div id="content-wrapper" class="d-flex flex-column">
-            <div class="modal-footer pt-3 record-btn-container">
+        <div id="content-wrapper" class="d-flex flex-column position-relative">
+            <div class="row position-absolute top-back-btn">
+                <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
+            </div>
+            <div class="modal-footer pt-3">
                 <%- include ../common/report-btn.ejs %>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
@@ -36,13 +39,13 @@
             </div>
 
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
-                <div class="col-lg-5 col-md-5 col-12 original-text">
+                <div class="col-lg-4 col-md-5 col-12 original-text">
                     <label><%- __('HINDI') %></label>
                     <div id="original-text">
 
                     </div>
                 </div>
-                <div class="form-group col-lg-5 col-md-5 col-12 m-0 edit-text" style="box-shadow:0 0;border:1px solid #bfbfbf;pointer-events:none">
+                <div class="form-group col-lg-4 col-md-5 col-12 m-0 edit-text" style="box-shadow:0 0;border:1px solid #bfbfbf;pointer-events:none">
                     <label><%- __('ENGLISH') %></label>
                     <div class="arrow-right"></div>
                     <textarea class="form-control edit-area" id="translate-text" rows="3"></textarea>
