--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -40,15 +40,15 @@
 
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
                 <div class="col-lg-4 col-md-5 col-12 original-text">
-                    <label><%- __('HINDI') %></label>
+                    <label id="from-label"><%- __('HINDI') %></label>
                     <div id="original-text">
 
                     </div>
                 </div>
                 <div class="form-group col-lg-4 col-md-5 col-12 m-0 edit-text" style="box-shadow:0 0;border:1px solid #bfbfbf;pointer-events:none">
-                    <label><%- __('ENGLISH') %></label>
+                    <label id="to-label"><%- __('ENGLISH') %></label>
                     <div class="arrow-right"></div>
-                    <textarea class="form-control edit-area" id="translate-text" rows="3"></textarea>
+                    <textarea class="form-control" id="translate-text" rows="3"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
-                <button class="btn align-self-start mb-2" id="need_change">
+                <button class="btn align-self-start mb-2 p-0" id="need_change">
                     <svg width="245" height="66" viewBox="0 0 245 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 33C1 15.3269 15.3269 1 33 1H212C229.673 1 244 15.3269 244 33C244 50.6731 229.673 65 212 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
                         <path d="M38.06 30.02L38.98 30.94L29.92 40H29V39.08L38.06 30.02ZM41.66 24C41.41 24 41.15 24.1 40.96 24.29L39.13 26.12L42.88 29.87L44.71 28.04C45.1 27.65 45.1 27.02 44.71 26.63L42.37 24.29C42.17 24.09 41.92 24 41.66 24ZM38.06 27.19L27 38.25V42H30.75L41.81 30.94L38.06 27.19Z" fill="#007BFF"/>
@@ -95,7 +95,7 @@
                         </text>
                     </svg>
                 </button>
-                <button class="btn align-self-start mb-2 d-none disabled" id="cancel-edit-button">
+                <button class="btn align-self-start mb-2 d-none p-0" id="cancel-edit-button">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
                         <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
@@ -105,7 +105,7 @@
                 </button>
 
                 <button class="btn web-view"></button>
-                <button class="btn align-self-start mb-2" id="like_button">
+                <button class="btn align-self-start mb-2 p-0" id="like_button">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
                         <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
@@ -114,7 +114,7 @@
                         </text>
                     </svg>
                 </button>
-                <button class="btn align-self-start mb-2 pl-4 d-none" id="submit-edit-button">
+                <button class="btn align-self-start mb-2 pl-4 d-none p-0" id="submit-edit-button">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
                         <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
