--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -116,8 +116,10 @@
             </div>
 
 <div id="myModal" class="modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="img01">
+    <div class="position-relative d-flex m-auto" style="width:80%">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
   </div>
         </div>
 
