--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -39,11 +39,11 @@
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
                 <div class="col-lg-4 col-md-5 col-12 original-text">
-                    <label><%- __('ENGLISH')%></label>
+                    <label id="from-label"><%- __('ENGLISH')%></label>
                     <div id="captured-text"></div>
                 </div>
                 <div class="form-group green-border-focus col-lg-4 col-md-5 col-12 m-0" id="edit-text">
-                    <label><%- __('HINDI') %></label>
+                    <label id="to-label"><%- __('HINDI') %></label>
                     <div class="arrow-right"></div>
                     <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
                 </div>
