Ayush | Fix likho india home chart issue

--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -43,12 +43,12 @@
                     </div>
                     <div class="col-lg-10 pt-2">
                         <div class="row m-0">
-                        <label class="col-2 text-center mt-2"><%= __('FROM') %>:</label>
+                        <label class="col-2 text-right mt-2"><%= __('FROM') %>:</label>
                         <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="from-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
 
                         </select>
                         <div class="col-1"></div>
-                        <label class="col-1 text-center mt-2"><%= __('TO') %>:</label>
+                        <label class="col-1 text-right mt-2"><%= __('TO') %>:</label>
                         <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="to-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
                             <% LANGUAGES.forEach(function(lang) { %>
                                 <option value="<%= lang.value %>">
