--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -23,6 +23,7 @@
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
+            <%- include ../common/recording-instructions.ejs %>
             <div class="row position-absolute top-back-btn">
                 <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
             </div>
