--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -36,7 +36,7 @@
             <div class="row m-0">
                 <div class="col-2"></div>
                 <div class="col-lg-3 col-md-3 col-sm-6 pl-0">
-                    <h4 class="h4 mb-4">
+                    <h4 class="h4 my-3 font-weight-normal text-right">
                         <%= __('Your language and top 3 most contributed languages') %>
                     </h4>
                 </div>
