--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -85,7 +85,7 @@
         </div>
     </div>
 </div>
-<%- include ../common/speakerDetail.ejs %>
+<%- include ../common/userDetails.ejs %>
 <%- include ../common/content-languages.ejs %>
 <%- include ../common/say-listen-language.ejs %>
 <%- include('../common/footer.ejs',{path:"../"}) %>
