--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -68,7 +68,7 @@
           </p>
           <div class="row justify-content-center mt-5">
             <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-              <a class="btn btn-primary text-white btn-lg h6 w-100">
+              <a class="btn btn-primary text-white btn-lg h6 w-100" href="./home.html">
                 <%- __('Back to SunoIndia Home') %>
               </a></div>
           </div>
