--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
@@ -17,14 +17,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/thankyou.css">
     <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/home.css">
     <link rel="stylesheet" type="text/css" href="../../css/common/common.css">
+    <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/thankyou.css">
+
 </head>
 
 <body>
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../"}); %>
 <div id="content-wrapper" class="container-fluid mt-5 pt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
+    <div class="row position-absolute top-back-btn">
+        <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
+    </div>
     <%- include ../common/thankyouPageHeading.ejs %>
     <div class="row mb-5 lazy">
         <%- include ../common/topLanguagesGraph.ejs %>
