--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-lg-3 mt-1" id="audio-row">
-                <div class="col-12 justify-content-center text-center">
+                <div class="col-12 justify-content-center text-center" style="pointer-events:none">
                     <audio id="my-audio" controls tabindex="-1" src="" type="audio/wav" controlslist="nodownload" crossorigin="anonymous" class="pointer-event"></audio>
                 </div>
             </div>
